# Flow-lang

./: .gitmodules  README.md  VERSION.md  regex.txt  stage1.md  stages.md
bootstrapping/: flowc.py
bootstrapping/flow/: Lexer.py  Parser.py  Preprocessor.py  Tokens.py  doNotReadMe.txt  grammar.lark  parser.lark  parser.py  symbols.lark  test.py
bootstrapping/flow/AST/: ASTNode.py  BinOpNode.py  (+11 more)
docs/flow-book/: concept-00-counting.md  concept-01-numbersNtypes.md  concept-10-characters.md  concept-XX-oo.md  intro.md  keywords.md  preprocessor.md
examples/expA/: main.flo  modA.flo
examples/test/: main.flo
flowc/: AST.py  CMakeLists.txt  CodeGen.py  Compile.py  Errors.py  FileIO.py  JsonConfig.py  Lexer.py  Parser.py  Preprocessor.py  flow.h  flowc.py  main.cxx  tokens.h
flowc-bootstrap/: AST.py  Defaults.py  Editor.py  ExceptionsHandles.py  Lexer.old.py  Lexer.py  Parser.py  Tokens.py  doNotReadMe.txt  flowc.py  lexer.bk.py  resources.py  tokens.py
flowc-bootstrap/AST/: BinaryExpr.py  FunctionCallExpr.py  FunctionExpr.py  LoopExpr.py  ValueExpr.py  VariableExpr.py  __init__.py
flowc-bootstrap/Constants/: Tokens.py
flowc-bootstrap/test/: lexer.text.flo
flowc-bootstrap/testcode/: lexer.text.flo
flowc/Constant/: Tokens.py
flowc/Constants/: AST.py  Tokens.py
flowc/ast/: ast.h
flowc/frontend/: frontend.cxx  frontend.h
flowc/parser/: parser.h
flowc/preprocessor/: preprocessor.cxx  preprocessor.h
flowc/scanner/: scanner.cxx  scanner.h
src/: AST.py  CodeGen.py  Frontend.py  Lexer.py  Parser.py  flowc.py
src/Constants/: AST.py  Tokens.py
(+1 files in other folders)
